--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   backend:
     build:
@@ -6,11 +7,22 @@ services:
       dockerfile: docker/Dockerfile.backend
     ports:
       - "8000:8000"
+    networks:
+      - app-network
+
   frontend:
     build:
       context: ..
       dockerfile: docker/Dockerfile.frontend
     ports:
       - "8501:8501"
+    environment:
+      - BACKEND_URL=http://backend:8000
     depends_on:
       - backend
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
